--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 config/.env
-logs/alpha_vantage.log
-logs/alpha_vantage.log
 .vscode/launch.json
 env/*
+sql/AlphaVantageDB/bin/
+sql/AlphaVantageDB/obj/
